--- a/index.html
+++ b/index.html
@@ -333,9 +333,16 @@
                         <h4>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</h4>
                         <a href="#">Политика конфиденциальности</a>
                     </div>
+                    <ol class="list">
+                        <li>tt</li>
+                        <li>ttt</li>
+                        <li>ttt</li>
+                        <li>tttt</li>
+                    </ol>
                 </div>
             </div>
         </footer>
+     
     </div>
 </body>
 </html>
