--- a/index.html
+++ b/index.html
@@ -330,19 +330,12 @@
             <div class="footer__end">
                 <div class="container">
                     <div class="footer__end-content">
-                        <h4>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</h4>
+                        <span>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</span>
                         <a href="#">Политика конфиденциальности</a>
                     </div>
-                    <ol class="list">
-                        <li>tt</li>
-                        <li>ttt</li>
-                        <li>ttt</li>
-                        <li>tttt</li>
-                    </ol>
                 </div>
             </div>
         </footer>
-     
     </div>
 </body>
 </html>
