--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="#" class="logo"><img src="image/logo.svg" alt="BEAUTY"></a>
                     <div class="header__main-box">
                         <a href="tel:88121234567" class="tel">8 (812) 123-45-67</a>
-                        <a href="#" class="header__main-btn btn">Обратный звонок</a>
+                        <a href="#" class="btn btn__white">Обратный звонок</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     <div class="hero__section-box">
                         <h1 class="hero__section-title">Супер кресло</h1>
                         <p>Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
-                        <a href="#" class="hero__section-btn btn">Подробнее</a>   
+                        <a href="#" class="btn btn__constant-width">Подробнее</a>   
                     </div>
                 </div>
             </section>
@@ -71,7 +71,7 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
                         </li>
                         <li>
@@ -81,7 +81,7 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
                         </li>
                         <li>
@@ -91,7 +91,7 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
                         </li>
                         <li>
@@ -101,9 +101,10 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
                         </li>
+                  
                     </ul>   
                 </div>
             </section>
@@ -127,7 +128,7 @@
                                 <div class="shop__promotion-content content__two">
                                     <h3>Заходите к нам</h3>
                                     <p>Более 300 магазинов по всей России</p>
-                                    <a href="#" class="shop__promotion-btn btn">Карта магазинов</a>   
+                                    <a href="#" class="btn btn__constant-width">Карта магазинов</a>   
                                 </div>
                                 <div class="shop__promotion-img img__two">
                                     <img src="image/car.svg" alt="">
@@ -220,9 +221,9 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
-                        </li>
+                        </li>          
                         <li>
                             <div class="product__card-content">
                                 <a href="#" class="card__visual">
@@ -230,9 +231,9 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
-                        </li>
+                        </li>          
                         <li>
                             <div class="product__card-content">
                                 <a href="#" class="card__visual">
@@ -240,9 +241,9 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
-                        </li>
+                        </li>          
                         <li>
                             <div class="product__card-content">
                                 <a href="#" class="card__visual">
@@ -250,10 +251,9 @@
                                 </a>
                                 <h3>Парикмахерское кресло «Норм» гидравлическое</h3>
                                 <p>9 900 ₽ </p>
-                                <a href="#" class="btn">Купить</a>
+                                <a href="#" class="btn btn__small">Купить</a>
                             </div>
-                        </li>
-                    
+                        </li>          
                     </ul>   
                 </div>
             </section>
@@ -341,9 +341,9 @@
                             <a href="#" class="icon-instagram"></a>
                         </li>
                     </ul>
-                    <div class="footer__main-box header__main-box">
+                    <div class="footer__main-box">
                         <a href="tel:88121234567" class="tel">8 (812) 123-45-67</a>
-                        <a href="#" class="footer__main-btn">Обратный звонок</a>
+                        <a href="#" class="btn btn__white">Обратный звонок</a>
                     </div>
                 </div>
             </div>
